# analysis-mashable-news

./: .gitignore  README.md  pyproject.toml
data/: README.md
notebooks/: analysis.py
output/: descriptive-statistics.html
