[tool.jupytext]
notebook_metadata_filter = "-all"
formats = "ipynb,py:percent"

[tool.poetry]
name = "analysis-mashable-news"
version = "0.1.0"
description = ""
authors = ["Davit Svanidze"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
numpy = "^1.25"
pandas = "^2.1.4"
ydata-profiling = {extras = ["notebook"], version = "^4.6.4"}
jupyterlab = "^4.0.10"
jupytext = "^1.16.0"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "^7.0.6"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.12"
plotnine = "^0.12.4"
statsmodels = "^0.14.1"
scipy = "^1.11.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
